similar/tests/snapshots/similar__udiff__unified_diff_newline_hint-2.snap
---
source: similar/src/udiff.rs
expression: "&diff.unified_diff().missing_newline_hint(false).header(\"a.txt\",\n\"b.txt\").to_string()"
---
--- a.txt
+++ b.txt
@@ -1 +1 @@
-a
+b
